Update `.travis.yml` and `README.rst`
-   Add build status indicator to `README.rst`
-   Set notification configuration in `.travis.yml`

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,10 @@ install:
 
 script:
   - "py.test tests"
+
+notifications:
+  irc:
+    channels:
+    - "irc.ozinger.org#khris"
+    on_success: change
+    on_failure: always
